refactor : 차수 별 위치상태를 문자로 변환하는 메서드를 일급 컬렉션 내부로 이동
Cars.changeCurrentTotalPositionalStatusToVisual 를 만들고
RacingGame.showCarsPositionalStatusForEachTrial 에서 내부적으로 호출하여 사용하도록 변경

변경된 로직에 맞게 테스트코드 리펙터링